<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvTitleBottomSheetHide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/titleBottomSheetHide"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvHide1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/hide1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvHide2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/hide2"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvHide3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hide3"
        android:textColor="@color/black"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvHide4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hide4"
        android:textColor="@color/black"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvHide5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hide5"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btCloseBottomSheetHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_bt_grey"
        android:text="@string/close"
        android:textAllCaps="false" />



</LinearLayout>
