<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivCloseReport"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="@+id/tvTitleBottomSheetHide"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleBottomSheetHide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/titleBottomSheetReport"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivCloseReport" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/rlReport1"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report1"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/report11"
                android:textColor="@color/black"
                android:textSize="18sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="5dp"
            android:src="@drawable/ic_back_right_black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlReport2"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report2"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/report21"
                android:textColor="@color/black"
                android:textSize="18sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="5dp"
            android:src="@drawable/ic_back_right_black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlReport3"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report3"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/report31"
                android:textColor="@color/black"
                android:textSize="18sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="5dp"
            android:src="@drawable/ic_back_right_black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlReport4"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report4"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/report41"
                android:textColor="@color/black"
                android:textSize="18sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="12dp"
            android:src="@drawable/ic_back_right_black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlReport5"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report5"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/report51"
                android:textColor="@color/black"
                android:textSize="18sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_back_right_black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlReport6"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report6"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/report61"
                android:textColor="@color/black"
                android:textSize="18sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="5dp"
            android:src="@drawable/ic_back_right_black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlReport7"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report7"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/report71"
                android:textColor="@color/black"
                android:textSize="18sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="30dp"
            android:src="@drawable/ic_back_right_black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlReport8"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report8"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/report81"
                android:textColor="@color/black"
                android:textSize="18sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="5dp"
            android:src="@drawable/ic_back_right_black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlReport9"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report9"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/report91"
                android:textColor="@color/black"
                android:textSize="18sp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="5dp"
            android:src="@drawable/ic_back_right_black" />

    </RelativeLayout>


</LinearLayout>
