<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_bottom_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-5dp"
        app:cardCornerRadius="30dp"
        android:orientation="vertical"
        android:paddingHorizontal="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/rounded_bottom_dialog"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="12dp">

            <TextView
                android:id="@+id/tvTitleBottomSheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/titleBottomSheet"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvHide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:text="@string/hide"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDownload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/download"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btCloseBottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_bt_grey"
                android:text="@string/close"
                android:textAllCaps="false" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>
