<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".account.AccountFragment">

    <ImageView
        android:id="@+id/selectProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:paddingEnd="20dp"
        android:src="@drawable/ic_select_black"
        tools:ignore="RtlSymmetry" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civAvatarProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image" />

    <TextView
        android:id="@+id/tvNameProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="Ngo Thi Thom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFollowerProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:text="@string/follower"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:text="@string/space"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFolloweingProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabProfile"
            app:tabMode="fixed"
            app:tabGravity="center"
            app:tabIndicatorGravity="stretch"
            app:tabSelectedTextColor="@color/white"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicator="@drawable/shape_bt_black"
            app:tabIndicatorColor="@color/black"
            app:tabIconTint="@color/black"
            app:tabBackground="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>
